# xodr2nxgpd

./: .gitignore  .pylint.rc  .style.yapf  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
etc/: odr_intersection_extraction.xml  odr_intersection_selection.xml
examples/: braunschweig.ipynb  visualization.ipynb
xodr2nxgpd/: __init__.py  core.py  intersection.py  io.py  network.py
xodr2nxgpd/opendriveparser/: parser.py
xodr2nxgpd/opendriveparser/elements/: geometry.py  opendrive.py  road.py  roadElevationProfile.py  roadLanes.py  roadLateralProfile.py  roadPlanView.py
