[metadata]
name = xodr2nxgpd
author = Lars Klitzke
author-email = lars.klitzke@gmail.com
summary = Conversion from OpenDRIVE to NetworkX and GeoPandas
description-file = README.md
description-content-type = text/md; charset=UTF-8
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    xodr2nxgpd

data_files =
    etc/xodr2nxgpd =
        etc/odr_intersection_extraction.xml
        etc/odr_intersection_selection.xml

[extras]
dev =
    yapf
    pylint

build =
    wheel

[entry_points]
console_scripts =
    xodr2nxgpd-dlr-fetcher = xodr2nxgpd.io:fetch_dlr_brunswick_opendrive_map
